--- a/WebRequests/Views/Home/Index.cshtml
+++ b/WebRequests/Views/Home/Index.cshtml
@@ -2,7 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="column">
+        <div class="row">
+            <a href="GetRequest" class="getButton btn btn-block">Get</a>
+        </div>
+        <div class="row">
+            <a href="PostRequest" class="postButton btn btn-block">Post</a>
+        </div>
+    </div>
+   
+    
 </div>
