--- a/WebRequests/wwwroot/css/site.css
+++ b/WebRequests/wwwroot/css/site.css
@@ -69,3 +69,19 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.row{
+    margin-bottom: 10px;
+}
+
+.btn{
+    color:white;
+}
+
+.getButton{
+    background-color: #2e86de;
+}
+
+.postButton {
+    background-color: #2e86de;
+}
