Working on the Get Request. Code not making sense yet, because I am using time to try to understand it along the way.

--- a/WebRequests/Views/Home/Index.cshtml
+++ b/WebRequests/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 <div class="container">
     <div class="column">
         <div class="row">
-            <a href="GetRequest" class="getButton btn btn-block">Get</a>
+            <a href="/Home/GetRequest" class="getButton btn btn-block">Get</a>
         </div>
         <div class="row">
-            <a href="PostRequest" class="postButton btn btn-block">Post</a>
+            <a href="/Home/PostRequest" class="postButton btn btn-block">Post</a>
         </div>
     </div>
    
