--- a/WebRequests/Views/Home/GetResult.cshtml
+++ b/WebRequests/Views/Home/GetResult.cshtml
@@ -1,10 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Get Request";
+﻿@model WebRequests.Models.Speaker
+@{
+    ViewData["Title"] = "Get Result";
 }
 <div class="bakgrund container bg-light">
     <div class="column">
         <div class="row">
-            <a href="/Home/GetRequest" class="getButton btn btn-block">Get</a> @*not button*@
+            <a href="/Home/GetResult" class="getButton btn btn-block">Get</a> @*not button*@
         </div>
 
         <div class="row" style="margin-bottom: 5px">
@@ -32,8 +33,22 @@
         </div>
 
         <div class="row">
-            <a href="/Home/GetResult" class="executeGetRequestButton btn btn-secondary">Execute Request</a>
-            <a href="Index" class="cancelButton btn btn-danger">Cancel</a>
+            <div class="input-group">
+                <span class="input-group-text col-12">Result:</span>
+            </div>
+
+            @*put in the result from the request here*@
+        <div class="input-group">
+            <span class="input-group-text col-12">@Html.DisplayFor(model => model.Name)</span>
+        </div>
+
+
+
+        </div>
+
+        <div class="row">
+            <a href="/Home/GetRequest" class="newGetRequestButton btn">Make new Request</a>
+            <a href="Index" class="backToHomeButton btn btn-primary">Main menu</a>
         </div>
 
     </div>
