--- a/WebRequests/Views/Home/GetRequest.cshtml
+++ b/WebRequests/Views/Home/GetRequest.cshtml
@@ -4,7 +4,7 @@
 <div class="bakgrund container bg-light">
     <div class="column">
         <div class="row">
-            <a href="/Home/GetRequest" class="getButton btn btn-block">Get</a> @*not button*@
+            <a href="/Home/GetRequest" class="getButton btn btn-block disabled">Get/api/speaker</a> 
         </div>
 
         <div class="row" style="margin-bottom: 5px">
@@ -32,7 +32,11 @@
         </div>
 
         <div class="row">
+
             <a href="/Home/GetResult" class="executeGetRequestButton btn btn-secondary">Execute Request</a>
+
+           
+
             <a href="Index" class="cancelButton btn btn-danger">Cancel</a>
         </div>
 
