--- a/WebRequests/Views/Home/PostRequest.cshtml
+++ b/WebRequests/Views/Home/PostRequest.cshtml
@@ -5,7 +5,7 @@
 <div class="bakgrund container bg-light">
     <div class="column">
         <div class="row">
-            <a href="Home/PostRequest" class="postButton btn btn-block">Post</a> @*not button*@
+            <a href="Home/PostRequest" class="postButton btn btn-block disabled">Post/api/speaker/{Id}</a>
         </div>
 
         <div class="row" style="margin-bottom: 5px">
