--- a/WebRequests/Views/Home/PostResult.cshtml
+++ b/WebRequests/Views/Home/PostResult.cshtml
@@ -4,7 +4,7 @@
 <div class="bakgrund container bg-light">
     <div class="column">
         <div class="row">
-            <a href="/Home/PostResult" class="postButton btn btn-block">Post</a> @*not button*@
+            <a href="/Home/PostResult" class="postButton btn btn-block disabled">Post/api/speaker/{Id}</a> 
         </div>
 
         <div class="row" style="margin-bottom: 5px">
@@ -35,8 +35,9 @@
             <div class="input-group">
                 <span class="input-group-text col-12">Result:</span>
             </div>
+           
             <div class="input-group">
-                <textarea class="form-control" aria-label="With textarea"></textarea>
+                <span class="input-group-text col-12">Here will the result from POST request be displayed</span>
             </div>
         </div>
 
