--- a/WebRequests/Views/Home/Index.cshtml
+++ b/WebRequests/Views/Home/Index.cshtml
@@ -5,12 +5,10 @@
 <div class="container">
     <div class="column">
         <div class="row">
-            <a href="/Home/GetRequest" class="getButton btn btn-block">Get</a>
+            <a href="/Home/GetRequest" class="getButton btn btn-block">Get/api/speaker</a>
         </div>
         <div class="row">
-            <a href="/Home/PostRequest" class="postButton btn btn-block">Post</a>
+            <a href="/Home/PostRequest" class="postButton btn btn-block">Post/api/speaker/{Id}</a>
         </div>
     </div>
-   
-    
 </div>
