--- a/WebRequests/Views/Home/GetResult.cshtml
+++ b/WebRequests/Views/Home/GetResult.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebRequests.Models.Speaker
+﻿@model WebRequests.Models.ViewModels.GetResultViewModel
 @{
     ViewData["Title"] = "Get Result";
 }
@@ -38,7 +38,16 @@
             </div>
            
             <div class="input-group">
-                <span class="input-group-text col-12">Here will the result from GET request be displayed</span>
+                <span class="input-group-text col-12">
+                        
+                            @foreach (var item in Model.Speakers)
+                            {
+                                        <p>@item.Name</p>
+                            }
+              
+                    Here will the result from GET request be displayed
+
+                </span>
             </div>
         </div>
 
